Pull request: 3395 fix table scroll styles
Closes #3395

Squashed commit of the following:

commit 63fd4593977cd2ac6595344f681df499dc62abb1
Author: Ildar Kamalov <ik@adguard.com>
Date:   Mon Aug 16 11:58:26 2021 +0300

    client: fix table scroll styles

--- a/client/src/components/App/index.css
+++ b/client/src/components/App/index.css
@@ -52,7 +52,7 @@ body {
 
 .modal-body--medium {
     max-height: 20rem;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .modal-body__item:not(:first-child) {
